...
      );
    }, .800);
    return () => clearTimeout(TimeOut);
  }, [text]);
  return (
    <>
      <View style={styles.container} testID={'searchScreen'}>
        <View style={styles.left} />
        <View style={styles.Right} />
        <Mystatusbar
          color={'transparent'}
          barStyle={'dark-content'}
          translucent={true}
...
            left={<Menu />}
            center={<HeadingText text={'FilmKu'} />}
            right={<Notif />}
          />
          <View style={styles.searchBoxContainer}>
            <TextInput
              testID="searchBox"
              onChangeText={onChangeText}
              value={text}
              placeholder={'search movies'}
              style={styles.searchBox}
              placeholderTextColor={'#88A4E8'}
            />
...
