...

  useEffect(() => {
    Moviedata();
  }, []);
  return (
    <>
      <View style={styles.container} testID={'HomeScreen'}>
        <View style={styles.left} />
        <View style={styles.Right} />
        <Mystatusbar
          color={'transparent'}
          barStyle={'dark-content'}
          translucent={true}
...
                />
                <FlatList
                  style={styles.flatList}
                  data={DATA}
                  renderItem={({item}) => (
                    <CardView
                      testID={'NowShowing'}
                      title={item.title}
                      poster_path={item.poster_path}
                      vote_average={item.vote_average}
                      onPress={() =>
                        navigation.navigate('DetailScreen', {
                          poster: item.backdrop_path,
...
