...
      title: 'Jacon Batalon',
      src: require('../assets/Images/img4.png'),
    },
  ];

  return (
    <View style={styles.container} testID={'detailScreen'}>
      <Mystatusbar
        barStyle={'light-content'}
        color={'transparent'}
        translucent={true}
      />
      <View style={styles.img}>
        <Image style={styles.img} source={{uri: `${path}`}} />
      </View>
      <View style={styles.header}>
        <Header
          testIDLeft={'BackBtn'}
          left={<Back />}
          onPressleft={() => navigation.goBack()}
          right={<Menu2 />}
        />
      </View>
      <ScrollView>
...
