...
        }}
      />
      <Tab.Screen
        name="Settings"
        component={SearchScreen}
        options={{
          tabBarTestID: 'SearchBtn',
          tabBarShowLabel: false,
          tabBarIcon: ({focused}) => {
            return (
              <View>
                <Bookmark1 fill={focused ? '#110E47' : '#D8D8D8'} />
              </View>
...
